--- a/index.html
+++ b/index.html
@@ -23,25 +23,26 @@
         <a-marker preset="hiro">
 
 
-            <a-plane position="0 0 0" rotation="-90 0 0" width="30" height="30" repeat="30 30" src="ImagenesEscenas/suelo.jpg" shadow></a-plane>
+            <a-plane position="0 0 0" rotation="-90 0 0" width="30" height="30" src="ImagenesEscenas/suelo.jpg" shadow></a-plane>
 
-<a-entity id="Moto1" position="-2 0 0" scale="0.017 0.017 0.017" 
+<a-entity id="Moto1" position="-2 1 0" scale="0.17 0.17 0.17" 
           sound="src:Audios/Audio.m4a; autoplay: true; loop: true; volume: 3"
           gltf-model="Moto1/scene.gltf">
     <a-animation attribute="rotation" to="0 360 0" dur="10000" easing="linear" repeat="indefinite"></a-animation>
 </a-entity>
 
-<a-entity id="Moto2" position="0 0 0" scale="0.018 0.018 0.018" 
+<a-entity id="Moto2" position="0 1 0" scale="0.18 0.18 0.18" 
           sound="src: Audios/videoplayback.m4a; autoplay: true; loop: true; volume: 3"
           gltf-model="Moto2/scene.gltf">
     <a-animation attribute="rotation" to="360 0 0" dur="8000" easing="linear" repeat="indefinite"></a-animation>
 </a-entity>
 
-<a-entity id="Moto3" position="2 0 0" scale="5.5 5.5 5.5" 
+<a-entity id="Moto3" position="2 1 0" scale="55 55 55" 
           sound="src:Audios/Audio.m4a; autoplay: true; loop: true; volume: 3"
           gltf-model="Moto3/scene.gltf">
-    <a-animation attribute="position" from="2 0 0" to="2 0 -1" dur="3000" direction="alternate" repeat="indefinite"></a-animation>
+    <a-animation attribute="position" from="2 1 0" to="2 1 -1" dur="3000" direction="alternate" repeat="indefinite"></a-animation>
 </a-entity>
+
 
 
         </a-marker>
