--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a-marker preset="hiro">
 
 
-            <a-plane position="0 0 0" rotation="-90 0 0" width="30" height="30" src="ImagenesEscenas/suelo.jpg" shadow></a-plane>
+            <a-plane position="0 0 0" rotation="-90 0 0" width="20" height="20" repeat="20 20" src="ImagenesEscenas/suelo.jpg" shadow></a-plane>
 
 <a-entity id="Moto1" position="-2 1 0" scale="0.17 0.17 0.17" 
           sound="src:Audios/Audio.m4a; autoplay: true; loop: true; volume: 3"
