--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Visualización AR - León, Ñu y Lobo</title>
+    <title>Modelos 3D de Motos 2t</title>
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <style>
@@ -22,76 +22,31 @@
 
         <a-marker preset="hiro">
 
+            <a-plane position="0 0 0" rotation="-90 0 0" 
+                     width="20" height="20" repeat="30 30" 
+                     src="ImagenesEscenas/suelo.jpg" shadow>
+            </a-plane>
 
-            <a-plane position="0 0 0" rotation="-90 0 0" width="40" height="40" repeat="40 40" src="ImagenesEscenas/suelo.jpg" shadow></a-plane>
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>Visualización AR - León, Ñu y Lobo</title>
-    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-        }
-    </style>
-</head>
-<body>
-    
-    <a-scene embedded arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;" vr-mode-ui="enabled: false">
+            <a-entity id="Moto1" position="-2 0 0" scale="0.003 0.003 0.003"
+                      sound="src: Audios/Audio.m4a; autoplay: true; loop: true; volume: 3"
+                      gltf-model="Moto1/scene.gltf">
+                <a-animation attribute="rotation" to="0 360 0" dur="10000" easing="linear" repeat="indefinite"></a-animation>
+            </a-entity>
 
-        <a-entity camera></a-entity>
+            <a-entity id="Moto2" position="0 0 0" scale="0.003 0.003 0.003"
+                      sound="src: Audios/videoplayback.m4a; autoplay: true; loop: true; volume: 3"
+                      gltf-model="Moto2/scene.gltf">
+                <a-animation attribute="rotation" to="0 360 0" dur="8000" easing="linear" repeat="indefinite"></a-animation>
+            </a-entity>
 
-        <a-sky src="ImagenesEscenas/cieloAzul.jpg"></a-sky>
-
-        <a-marker preset="hiro">
-
-
-            <a-plane position="0 0 0" rotation="-90 0 0" width="20" height="20" repeat="30 30" src="ImagenesEscenas/suelo.jpg" shadow></a-plane>
-
-<a-entity id="Moto1" position="-2 0 0" scale="0.003 0.003 0.003" 
-          sound="src:Audios/Audio.m4a; autoplay: true; loop: true; volume: 3"
-          gltf-model="Moto1/scene.gltf">
-    <a-animation attribute="rotation" to="0 360 0" dur="10000" easing="linear" repeat="indefinite"></a-animation>
-</a-entity>
-
-<a-entity id="Moto2" position="0 0 0" scale="0.0033 0.0033 0.0033" 
-          sound="src: Audios/videoplayback.m4a; autoplay: true; loop: true; volume: 3"
-          gltf-model="Moto2/scene.gltf">
-    <a-animation attribute="rotation" to="360 0 0" dur="8000" easing="linear" repeat="indefinite"></a-animation>
-</a-entity>
-
-<a-entity id="Moto3" position="2 0 0" scale="1 1 1" 
-          sound="src:Audios/Audio.m4a; autoplay: true; loop: true; volume: 3"
-          gltf-model="Moto3/scene.gltf">
-    <a-animation attribute="position" from="2 0 0" to="2 1 0" dur="3000" direction="alternate" repeat="indefinite"></a-animation>
-</a-entity>
-
+            <a-entity id="Moto3" position="2 0 0" scale="0.003 0.003 0.003"
+                      sound="src: Audios/Audio.m4a; autoplay: true; loop: true; volume: 3"
+                      gltf-model="Moto3/scene.gltf">
+                <a-animation attribute="position" from="2 0 0" to="2 1 0" dur="3000" direction="alternate" repeat="indefinite"></a-animation>
+            </a-entity>
 
         </a-marker>
-
-        <a-entity camera></a-entity>
     </a-scene>
 
 </body>
-</html>
-
-
-</body>
-
-</html>
-
-        </a-marker>
-
-        <a-entity camera></a-entity>
-    </a-scene>
-
-</body>
-</html>
-
-
-</body>
-
 </html>
