--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <a-plane position="0 0 0" rotation="-90 0 0" 
                      width="56" height="56" repeat="30 30" 
-                     src="ImagenesEscenas/suelo.jpg" shadow>
+                     src="ImagenesEscenas/calle.jpg" shadow>
             </a-plane>
 
             <a-entity id="Moto1" position="-4 -1 4" scale="0.03 0.03 0.03"
@@ -42,7 +42,7 @@
             <a-entity id="Moto3" position="2 0 0" scale="0.06 0.06 0.06"
                       sound="src: Audios/Audio.m4a; autoplay: true; loop: true; volume: 3"
                       gltf-model="Moto3/scene.gltf">
-                <a-animation attribute="position" from="4 0 0" to="4 0.5 0" dur="3000" direction="alternate" repeat="indefinite"></a-animation>
+                <a-animation attribute="position" from="2 0 0" to="4 0.5 0" dur="3000" direction="alternate" repeat="indefinite"></a-animation>
             </a-entity>
 
         </a-marker>
@@ -50,4 +50,3 @@
 
 </body>
 </html>
-
